Safari: Improve scroll lock to fix empty gaps when compact bar is used

--- a/view/frontend/web/css/source/components/_gallery.less
+++ b/view/frontend/web/css/source/components/_gallery.less
@@ -345,7 +345,7 @@
         position: fixed;
         z-index: 999;
         width: 100%;
-        height: 100vh;
+        height: 100dvh;
         padding: 10px;
         box-sizing: border-box;
         background: ~"rgb(var(--base-bg, 255, 255, 255))";
